src/test/deca/context/invalid/class/invalid_class_already_declared.deca
// Description:
//    Test of class redefinition
//    Test rule 1.3
//
// Result:
// [Begin Result]
//invalid_class_already_declared.deca:19:0: Class MyClass already declared. Rule 1.3.
// [End Result]
//
// History:
//    created on 12/01/2025


class MyClass {

}

//redefinition
class MyClass {

}

{
    //empty main
}
